Update recap.md